--- a/public/complements/styles/tertiary/network.css
+++ b/public/complements/styles/tertiary/network.css
@@ -1,17 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap');
-
 :root {
-    --color-main     : #d60b0b;
-    --color-black    : #151414;
-    --color-semiblack: #202020;
-    --color-white    : #f3f2f2;
-    --color-grey     : #333;
+    --color-main      : #d60b0b;
+    --color-secondary : #bb0f0f;
+    --color-black     : #151414;
+    --color-semiblack : #202020;
+    --color-dark      : #0c0b0b;
+    --color-light     : #fcfcfc;
+    --color-white     : #f3f2f2;
+    --color-light-grey: #cfcfcf;
+    --color-semigrey  : #565555;
+    --color-grey      : #535151;
 }
 
-/* fonts select */
+/* Fonts */
+
 @font-face {
     font-family: "aero";
-    src        : url("../fonts/aeroxys/Aeroxys.ttf") format("truetype");
+    src        : url("S../fonts/aeroxys/Aeroxys.ttf") format("truetype");
 }
 
 @font-face {
@@ -29,244 +33,111 @@
     src        : url("../fonts/neue/NeueMontreal-Medium.otf") format("truetype");
 }
 
+@font-face {
+    font-family: "ahsing";
+    src        : url("../fonts/Ahsing/Ahsing-Regular.otf") format("truetype");
+}
+
+
+/* Estilos generales */
 body {
-    font-family     : "neue", sans-serif;
+    font-family     : 'neue';
+    font-size       : 1.2em;
     font-weight     : lighter;
-    background-color: var(--color-black);
-    /* Color de fondo */
-    color           : var(--color-white);
-    /* Color del texto */
+    background-color: var(--color-dark);
+    color           : var(--color-light-grey);
     margin          : 0;
     padding         : 0;
-    display         : flex;
-    justify-content : center;
-    height          : 100vh;
-    padding-top     : 50px;
 }
-
-/* Navbar Section */
-#navbar {
-    width          : 98%;
-    position       : fixed;
-    top            : 0;
-    left           : 0;
-    display        : flex;
-    justify-content: space-between;
-    align-items    : center;
-    padding        : 10px 20px;
-    background     : transparent;
-    z-index        : 2000;
-    transition     : background-color 0.3s ease;
-}
-
-#navbar .menu-icon {
-    cursor  : pointer;
-    z-index : 2001;
-    position: relative;
-}
-
-#navbar .menu-icon-bar {
-    display         : block;
-    width           : 33px;
-    height          : 4px;
-    margin-bottom   : 5px;
-    background-color: #fff;
-    transition      : all 0.3s ease;
-}
-
-#navbar .menu-icon.close .menu-icon-bar:nth-child(1) {
-    transform: rotate(45deg);
-    position : absolute;
-    top      : 50%;
-    left     : 0;
-}
-
-#navbar .menu-icon.close .menu-icon-bar:nth-child(2) {
-    opacity: 0;
-}
-
-#navbar .menu-icon.close .menu-icon-bar:nth-child(3) {
-    transform: rotate(-45deg);
-    position : absolute;
-    top      : 50%;
-    left     : 0;
-}
-
-#navbar .menu-icon.close {
-    background-color: transparent;
-}
-
-.logo a {
-    font-family    : "aero";
-    font-size      : 2.5em;
-    color          : var(--color-main);
-    text-decoration: none;
-}
-
-/* Menu Section */
-#overlayNav {
-    position        : fixed;
-    top             : 0;
-    left            : 0;
-    width           : 100%;
-    height          : 0;
-    background-color: var(--color-black);
-    overflow        : hidden;
-    z-index         : 1500;
-    transition      : height 0.5s ease-in-out;
-}
-
-#overlayNav .overlay-content {
-    display        : flex;
-    justify-content: space-between;
-    padding        : 20px;
-    height         : 100%;
-}
-
-#overlayNav .overlay-left,
-#overlayNav .overlay-right {
-    width: 50%;
-}
-
-#overlayNav .overlay-video img {
-    width        : 100%;
-    max-width    : 500px;
-    height       : auto;
-    margin-left  : 15rem;
-    margin-top   : 5rem;
-    border-radius: 5px;
-}
-
-#overlayNav .overlay-video .video-controls {
-    margin-top : 10px;
-    margin-left: 15rem;
-    color      : var(--color-white);
-    font-family: "neue";
-}
-
-#overlayNav .overlay-right ul {
-    list-style: none;
-    padding   : 0;
-    margin-top: 5rem;
-}
-
-#overlayNav .overlay-right ul li {
-    margin: 10px 0;
-}
-
-#overlayNav .overlay-right ul li a {
-    font-size      : 2em;
-    color          : var(--color-white);
-    text-decoration: none;
-    font-family    : "neue";
-    position       : relative;
-    transition     : text-decoration-color 0.3s ease, text-decoration-thickness 0.3s ease;
-}
-
-#overlayNav .overlay-right ul li a::after {
-    content         : '';
-    display         : block;
-    position        : absolute;
-    left            : 0;
-    bottom          : 0;
-    width           : 100%;
-    height          : 2px;
-    background-color: var(--color-white);
-    transform       : scaleX(0);
-    transform-origin: bottom right;
-    transition      : transform 0.3s ease;
-}
-
-#overlayNav .overlay-right ul li a:hover::after {
-    transform       : scaleX(1);
-    transform-origin: bottom left;
-}
-
-#overlayNav .cta-button {
-    position  : relative;
-    margin-top: 20px;
-    padding   : 10px 20px;
-    background: transparent;
-    border    : 2px solid #fff;
-    color     : #fff;
-    font-size : 1.5em;
-    cursor    : pointer;
-    overflow  : hidden;
-    transition: color 0.3s ease;
-}
-
-#overlayNav .cta-button::after {
-    content         : '';
-    display         : block;
-    position        : absolute;
-    left            : 0;
-    top             : 0;
-    width           : 100%;
-    height          : 100%;
-    background-color: var(--color-main);
-    transform       : scaleX(0);
-    transform-origin: left;
-    transition      : transform 0.3s ease;
-    z-index         : -1;
-}
-
-#overlayNav .cta-button:hover::after {
-    transform: scaleX(1);
-}
-
-#overlayNav .cta-button:hover {
-    color: #fff;
-}
-
-#overlayNav.active {
-    height: 65vh;
-}
-
 
 .container {
-    position     : absolute;
-    max-width    : 60rem;
-    margin       : 0 auto;
-    padding      : 20px;
-    background   : linear-gradient(45deg, #333 0%, #151414 100%);
-    border       : 1px solid #454545;
-    border-radius: 8px;
-    text-align   : center;
+    padding  : 20px;
+    max-width: 900px;
+    margin   : auto;
 }
 
 h1 {
-    color      : var(--color-white);
-    font-family: "neue";
-    font-weight: lighter;
-    font-size  : 2.9em;
-    /* Color del título */
+    font-family  : "neue-medium";
+    font-weight  : lighter;
+    text-align   : center;
+    font-size    : 3.2rem;
+    margin-bottom: 30px;
 }
 
-ul {
-    list-style-type: none;
-    padding        : 0;
-    margin         : 0;
+/* Lista de redes WiFi */
+.wifi-list {
+    display              : grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    /* Configura columnas automáticas, con un mínimo de 250px */
+    grid-gap             : 20px;
+    /* Espacio entre las tarjetas */
+    padding              : 0;
 }
 
-.container ul li {
-    border-radius: 8px;
-    margin-bottom: 10px;
-    padding      : 10px;
-    text-align   : left;
-    font-family  : "neue";
-    font-size    : 1.6em;
+.wifi-card {
+    background-color: var(--color-black);
+    border          : 1px solid var(--color-grey);
+    padding         : 20px;
+    margin-bottom   : 20px;
+    border-radius   : 10px;
+    transition      : border 0.5s ease;
+    font-size       : 0.9em;
+    list-style      : none;
+    /* Hacer el texto un poco más pequeño */
+
+}
+
+.wifi-card:hover {
+    border: 1px solid var(--color-light-grey);
+}
+
+/* Texto dentro de la tarjeta */
+.essid,
+.bssid,
+.signal,
+.channel,
+.encryption {
+    margin: 10px 0;
+
+}
+
+strong i {
+    color: var(--color-white);
 }
 
 strong {
-    color      : var(--color-main);
-    font-family: "neue";
-    font-weight: lighter;
-
-    /* Color de los textos en negrita */
+    display         : inline-block;
+    color           : var(--color-main);
+    background-color: var(--color-semiblack);
+    padding         : 1px 5px;
+    border-radius   : 10px;
 }
 
-hr {
-    border    : none;
-    border-top: 1px solid var(--color-dark);
-    margin    : 10px 0;
+
+
+/* Botón seleccionar */
+.btn-select {
+    margin-top      : 10px;
+    background-color: var(--color-secondary);
+    color           : var(--color-white);
+    border          : none;
+    padding         : 8px 12px;
+    border-radius   : 5px;
+    cursor          : pointer;
+    transition      : background-color 0.3s;
+    font-family     : "neue";
+    font-weight     : lighter;
+    font-size       : 1em;
+}
+
+.btn-select:hover {
+    background-color: var(--color-main);
+}
+
+.fa-exclamation-circle {
+    color: orange;
+}
+
+.fa-shield {
+    color: green;
 }
