changed css section faq

--- a/public/complements/styles/main/home/about.css
+++ b/public/complements/styles/main/home/about.css
@@ -1,4 +1,5 @@
 .about-comments {
+    width     : 100%;
     background: radial-gradient(circle, rgba(198, 21, 21, 0.109) 0%, #0c0b0b 35%);
     text-align: center;
     margin    : 50px 0;
