--- a/public/complements/styles/main/home/features.css
+++ b/public/complements/styles/main/home/features.css
@@ -16,6 +16,7 @@
 }
 
 .features-block h3 {
+    text-align   : center;
     grid-column  : span 3;
     margin-bottom: 20px;
     font-family  : "neue-medium";
