--- a/public/complements/styles/secondary/form/start.css
+++ b/public/complements/styles/secondary/form/start.css
@@ -154,13 +154,18 @@ body {
 }
 
 h2 {
-    font-size     : 2.2em;
+    font-size     : 3em;
     font-weight   : 900;
     color         : var(--color-main);
     font-family   : "neue-medium";
     font-weight   : lighter;
     letter-spacing: 2.5px;
     text-align    : center;
+}
+
+a {
+    text-decoration: none;
+    color          : var(--color-main);
 }
 
 .form-inputs {
