--- a/public/complements/styles/main/home/start.css
+++ b/public/complements/styles/main/home/start.css
@@ -193,11 +193,11 @@ body {
   display         : flex;
   flex-direction  : column;
   height          : 100vh;
-  transition      : background-color 0.5s ease, color 0.5s ease;
+  transition      : background-color 0.3s ease, color 0.3s ease;
   overflow        : hidden;
 }
 
 body.light-mode {
-  background: var(--mode-light);
+  background: var(--color-white);
   color     : var(--color-black);
 }
