--- a/public/complements/styles/main/home/features.css
+++ b/public/complements/styles/main/home/features.css
@@ -25,7 +25,11 @@
     font-weight  : lighter;
     opacity      : 0;
     transform    : translateX(-200px);
-    transition   : opacity 0.9s ease-out, transform 0.9s ease-out;
+    transition   : opacity 0.9s ease-out, transform 0.9s ease-out, color 0.3s ease;
+}
+
+.light-mode .features-block h3 {
+    color: var(--color-black);
 }
 
 .features-block.visible h3 {
@@ -51,6 +55,11 @@
     border          : 1px solid var(--color-light-grey);
 }
 
+.light-mode .feature-item:hover {
+    border          : 1px solid var(--color-dark);
+    background-color: var(--color-light-grey);
+}
+
 .feature-text h4 {
     margin     : 0;
     font-size  : 1.9em;
@@ -66,6 +75,10 @@
     font-size    : 30px;
 }
 
+.light-mode .feature-text i {
+    color: var(--color-black);
+}
+
 
 .feature-text p {
     margin     : 20px 0 0;
@@ -73,6 +86,10 @@
     font-family: "neue";
     font-weight: lighter;
     color      : var(--color-light-grey);
+}
+
+.light-mode .feature-text p {
+    color: var(--color-black);
 }
 
 @media (max-width: 768px) {
