--- a/public/complements/styles/main/home/footer.css
+++ b/public/complements/styles/main/home/footer.css
@@ -3,13 +3,19 @@
     background-color: var(--color-black);
     color           : var(--color-light-grey);
     border-top      : 1px solid var(--color-grey);
-
-    padding    : 50px;
-    font-family: 'neue';
-    position   : relative;
-    z-index    : 1;
-    overflow   : hidden;
+    transition      : background-color 0.5s ease, color 0.5s ease;
+    padding         : 50px;
+    font-family     : 'neue';
+    position        : relative;
+    z-index         : 1;
+    overflow        : hidden;
     /* Aquí se ocultará solo la parte inferior */
+}
+
+.light-mode .footer {
+    background-color: var(--color-light);
+    color           : var(--color-black);
+    border-top      : 1px solid var(--color-grey);
 }
 
 .footer-content {
@@ -27,6 +33,10 @@
     font-size : 1.4em;
     color     : var(--color-light-grey);
     text-align: center;
+}
+
+.light-mode .logo-section p {
+    color: var(--color-black);
 }
 
 .logo-section .logo {
@@ -53,6 +63,10 @@
     text-decoration: underline;
 }
 
+.light-mode .column h3 {
+    color: var(--color-black);
+}
+
 .column ul {
     list-style: none;
     padding   : 0;
@@ -68,6 +82,10 @@
     font-weight    : lighter;
     text-decoration: none;
     transition     : color 0.3s ease;
+}
+
+.light-mode .column ul li a {
+    color: var(--color-black);
 }
 
 .column ul li a:hover {
@@ -96,4 +114,8 @@
     font-family: "neue";
     font-weight: lighter;
     color      : var(--color-light-grey);
+}
+
+.light-mode .footer-bottom p {
+    color: var(--color-black);
 }
