--- a/public/complements/styles/secondary/form/start.css
+++ b/public/complements/styles/secondary/form/start.css
@@ -95,6 +95,13 @@
     border          : 1px solid #c3e6cb;
 }
 
+#particles-js {
+    position: fixed;
+    width   : 100%;
+    height  : 100%;
+    z-index : -1;
+}
+
 
 body {
     min-height      : 100vh;
@@ -112,6 +119,17 @@ body {
     width           : 900px;
     /* Aumentamos el ancho para acomodar la imagen */
     height          : 550px;
+    background-color: var(--color-black);
+    border          : 1px solid var(--color-grey);
+    border-radius   : 10px;
+    overflow        : hidden;
+}
+
+.box-signup {
+    position        : relative;
+    width           : 900px;
+    /* Aumentamos el ancho para acomodar la imagen */
+    height          : 620px;
     background-color: var(--color-black);
     border          : 1px solid var(--color-grey);
     border-radius   : 10px;
@@ -137,9 +155,9 @@ body {
 
 .icon-top-left {
     position : absolute;
-    top      : 20px;
+    bottom   : 30px;
     /* Ajusta la distancia desde la parte superior */
-    left     : 30px;
+    left     : 45%;
     /* Ajusta la distancia desde la parte izquierda */
     font-size: 2.5em;
     z-index  : 10;
@@ -157,15 +175,16 @@ body {
 .back-to-website {
     position        : absolute;
     top             : 30px;
-    right           : 20px;
+    left            : 20px;
     font-size       : 1.2em;
     color           : var(--color-light-grey);
     z-index         : 10;
     font-family     : "neue";
-    background-color: var(--color-semiblack);
-    border-radius   : 10px;
+    background-color: var(--color-black);
+    border-radius   : 20px;
+    border          : 1px solid var(--color-light-grey);
     display         : inline-block;
-    padding         : 1px 10px;
+    padding         : 5px 10px;
 }
 
 .back-to-website a {
@@ -179,18 +198,20 @@ body {
 }
 
 .security-message {
-    position  : absolute;
-    bottom    : 30px;
+    position        : absolute;
+    bottom          : 30px;
     /* Distancia desde el fondo de la imagen */
-    left      : 50%;
+    left            : 50%;
     /* Centrar horizontalmente */
-    transform : translateX(-50%);
+    transform       : translateX(-50%);
     /* Ajustar el centro */
-    font-size : 1.5em;
-    color     : var(--color-light-grey);
-    text-align: center;
-    z-index   : 10;
-    width     : 13em;
+    font-size       : 1.5em;
+    color           : var(--color-light-grey);
+    background-color: #0c0b0b74;
+    border-radius   : 20px;
+    text-align      : center;
+    z-index         : 10;
+    width           : 13em;
     /* Asegurarse de que esté por encima de la imagen */
 }
 
@@ -223,11 +244,32 @@ h2 {
 }
 
 .intro {
-    font-size  : 1.5em;
+    font-size  : 1.8em;
     font-weight: lighter;
     color      : var(--color-light-grey);
     font-family: "neue";
     text-align : center;
+}
+
+p {
+    font-size  : 1.2em;
+    font-weight: lighter;
+    color      : var(--color-semigrey);
+    font-family: "neue";
+    text-align : left;
+    user-select: none;
+}
+
+p a {
+    color      : var(--color-secondary);
+    font-family: "neue";
+    font-weight: lighter;
+    transition : color 0.5s;
+    user-select: none;
+}
+
+p a:hover {
+    color: var(--color-main);
 }
 
 a {
@@ -282,6 +324,7 @@ a {
     font-family    : "neue";
     font-weight    : lighter;
     font-size      : 1.2em;
+    user-select    : none;
 }
 
 .links a:first-child:hover {
@@ -341,4 +384,35 @@ input[type="submit"]:hover {
 .show-password .field-icon {
     color: var(--color-main);
     /* Color del icono cuando la contraseña es visible */
+}
+
+/* Estilos del checkbox de términos y condiciones */
+.form-label {
+    display    : flex;
+    align-items: center;
+}
+
+.form-label input[type="checkbox"] {
+    margin-right: 10px;
+    width       : 16px;
+    height      : 16px;
+}
+
+.form-label label {
+    font-size  : 19px;
+    color      : var(--color-grey);
+    font-family: "neue";
+    font-weight: lighter;
+    user-select: none;
+}
+
+.form-label a {
+    color          : var(--color-secondary);
+    text-decoration: none;
+    transition     : color 0.5s;
+}
+
+.form-label a:hover {
+    text-decoration: underline;
+    color          : var(--color-main);
 }
