--- a/public/complements/styles/main/home/footer.css
+++ b/public/complements/styles/main/home/footer.css
@@ -116,6 +116,12 @@
     color      : var(--color-light-grey);
 }
 
+.footer-bottom a {
+    color          : var(--color-light-grey);
+    text-decoration: none;
+    transition     : color 0.3s ease;
+}
+
 .light-mode .footer-bottom p {
     color: var(--color-black);
 }
