--- a/public/complements/styles/main/home/footer.css
+++ b/public/complements/styles/main/home/footer.css
@@ -122,6 +122,10 @@
     transition     : color 0.3s ease;
 }
 
+.light-mode .footer-bottom a {
+    color: var(--color-black);
+}
+
 .light-mode .footer-bottom p {
     color: var(--color-black);
 }
